Ajustes em Lote e LoteItemEstoque finalizado